2004-01-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/: Forward port.

2003-10-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/install-info-html.sh: Use Bash.

	* cygwin/mknetrel: Patch from Bert.

2003-09-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/lily-wins.py: Check whether to run ly2dvi or lilypond.

	* stepmake/stepmake/topdocs-targets.make (copy-to-top): Do not
	try to copy *png, index.html (Bertalan Fodor).

	* cygwin/mknetrel (preinstall): Set webdir (Bertalan Fodor).

2003-09-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/note-collision.cc (check_meshing_chords): Do not remove
	dots (from down head) when merging similar heads (thanks Matthias
	Kilian).  Simplify merge_possible tests and other cleanups

	* input/regression/collision-merge-differently-dotted.ly: Add test
	for disappearing dots on similar heads for both voices.

2004-01-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/invoking.itexi (Invoking lilypond): Document
	that tagline overrides copyright for single page scores. Correct
	the default tagline value.

2004-01-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.texi: Compile fix (thanks Mats).

2004-01-29  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* buildscripts/lilypond-login.sh: Avoid warning about undefined
	TEXMF if it's previously unset.

2004-01-29  Heikki Junes <hjunes@cc.hut.fi>

	* scm/chord-name.scm (german-markup): bugfix: use SEMI-TONE.

	* input/test/trills.ly: fix the unfolding of lineprall.

	* input/test/figured-bass-alternative.ly: fix accidental.

2004-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.texi: Add note about safe mode.
	
	* input/no-notation/dos-guile.ly: 
	* input/no-notation/dos-ps.ly: 
	* input/no-notation/dos-tex.ly: New file.  These tests still FAIL.
	
	* input/no-notation/safe-include.ly:
	* input/no-notation/safe-guile.ly:
	* input/no-notation/safe-ps.ly: 
	* input/no-notation/safe-tex.ly: New file.
