@@ -13,6 +13,7 @@ Werner Lemberg
 Nicolas Sceaux 
 Nick Busigin
 Matthias Kilian
+Erik Sandberg
 
 Release 2.0
 ***********
